# fh6-universal-radio

./: .gitignore  BUILD_ON_LINUX.md  CMakeLists.txt  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_STATUS.md  GPL_CHECK_FIX.md  LINUX_BUILD_SUCCESS.md  LOCAL_FILES_TESTING.md  MELODY_GUIDE.md  MINGW_RUNTIME_FIX.md  MUSIC_FOLDER_PATH.md  NEXT_STEPS.md  PROTON_BUILD_STATUS.md  PROTON_COMPATIBILITY_ANALYSIS.md  PROTON_CRITICAL_APIS.md  PROTON_LOCAL_FILES_TESTING_GUIDE.md  PROTON_QUICK_START.md  PROTON_STACK_OVERFLOW_FIX.md  PROTON_TESTING_DOCS_README.md  README.md  README_LINUX.md  SESSION_PROGRESS.md  STACK_OVERFLOW_DIAGNOSIS.md  TESTING.md  config.example.toml  mingw64-toolchain.cmake  package-lock.json
.github/workflows/: build.yaml  librespot.yaml
docs/: windows-packaging.md
include/fh6/: audio_source.hpp  config.hpp  deps.hpp  playback_dsp.hpp  safe_mem.hpp  source_registration.hpp  subprocess.hpp
include/fh6/audio/: endpoint_classifier.hpp  wasapi_loopback_capture.hpp
include/fh6/fmod/: dsp_bridge.hpp  dsp_control_loop.hpp  dsp_render_policy.hpp  dsp_retarget_policy.hpp  game_state_probe.hpp  metadata_injector.hpp  radio_discovery.hpp  radio_target_policy.hpp  texture_injector.hpp
include/fh6/http/: config_json.hpp  http_server.hpp
include/fh6/melody/: car_change_detector.hpp  melody_player.hpp  melody_scanner.hpp
include/fh6/roon/: roon_control_client.hpp  roon_sidecar_process.hpp  setup_diagnostics.hpp
include/fh6/sources/: airplay_source.hpp  apple_music_source.hpp  external_audio_source.hpp  external_media_session.hpp  jellyfin_source.hpp  koel_source.hpp  local_file_source.hpp  online_radio_source.hpp  roon_source.hpp  soundcloud_source.hpp  spotify_source.hpp  tidal_source.hpp  vanilla_radio_source.hpp  youtube_music_source.hpp
include/fh6/worker/: worker_client.hpp
installer/inno/: FH6UniversalRadio.iss
scripts/: build-installer.ps1  build-tools.ps1  build.ps1  build.sh  dist-readme.txt  fetch-media.sh  fetch-vbcable.ps1  get-deps.ps1  install-vbcable.ps1  install.ps1  install.sh  lint-tools.ps1  lint.ps1  package-tools.ps1  package-windows.ps1  windows-installer.ps1  windows-uninstall.ps1
src/: bridge.cpp  config.cpp  deps.cpp  log.cpp  playback_dsp.cpp  source_registration.cpp  subprocess.cpp
src/audio/: endpoint_classifier.cpp  miniaudio.cpp  wasapi_loopback_capture.cpp  wasapi_render_devices.cpp
src/companion/: cable_monitor.cpp  fh6-radio-companion.rc
src/fmod/: dsp_bridge.cpp  dsp_control_loop.cpp  game_state_probe.cpp  metadata_injector.cpp  radio_discovery.cpp  texture_injector.cpp
src/http/: config_json.cpp  http_server.cpp  http_wire.cpp  http_wire.hpp  roon_routes.cpp  roon_routes.hpp
src/melody/: car_change_detector.cpp  melody_player.cpp  melody_scanner.cpp
src/net/: http_get.cpp
src/proxy/: dll_main.cpp  version.def
src/roon/: roon_control_client.cpp  roon_sidecar_process.cpp  setup_diagnostics.cpp
src/sources/: airplay_source.cpp  apple_music_source.cpp  external_audio_source.cpp  external_media_session.cpp  jellyfin_source.cpp  koel_source.cpp  local_file_source.cpp  online_radio_source.cpp  roon_source.cpp  soundcloud_source.cpp  spotify_source.cpp  tidal_helper.py  tidal_source.cpp  youtube_music_source.cpp  youtube_music_support.cpp  youtube_music_support.hpp
src/worker/: worker_client.cpp  worker_main.cpp
tests/: audio_endpoint_classifier_tests.cpp  build_tools.tests.ps1  config_roundtrip_tests.cpp  dashboard_ui.tests.ps1  diagnostics_logging.tests.ps1  dsp_bridge_install_tests.cpp  dsp_render_policy_tests.cpp  dsp_retarget_policy_tests.cpp  file_line_limits.tests.ps1  http_server_routes_tests.cpp  lint_tools.tests.ps1  package_tools.tests.ps1  roon_control_client_tests.cpp  roon_setup_diagnostics_tests.cpp  roon_sidecar_process_tests.cpp  roon_source_tests.cpp  source_registration_tests.cpp  wasapi_loopback_capture_tests.cpp  youtube_music_runtime_tests.cpp
tools/roon-bridge/: README.md  THIRD_PARTY_NOTICES.md  index.mjs  package-lock.json  package.json
tools/roon-bridge/lib/: api-server.mjs  roon-runtime.mjs
tools/roon-bridge/test/: api.test.mjs  ip-shim.test.mjs  roon-runtime.test.mjs
ui/test/render/: settings.test.js
